--- a/configclient.yml
+++ b/configclient.yml
@@ -3,3 +3,9 @@ server:
 spring:
   application:
     name: CONFIGCLIENT
+  rabbitmq:
+    virtual-host: /caofeng
+    host: 192.168.56.101
+    port: 5672
+    username: caofeng
+    password: 123456
